fixed all layout issues

--- a/src/Components/Contacts/Contacts.scss
+++ b/src/Components/Contacts/Contacts.scss
@@ -2,10 +2,11 @@
 @import "../../_global_theme";
 
 .contact {
+	width: 100%;
 	padding: 0;
 	display: grid;
 	grid-template-rows: 1fr;
-	grid-template-columns: 1fr 4fr;
+	grid-template-columns: minmax(0, 1fr) 300px;
 	grid-template-areas: "ct-head ct-content";
 	.contact-head {
 		grid-area: ct-head;
@@ -17,8 +18,11 @@
 		background: $background-dark;
 		border-right: solid 0.5px #ffffff;
 		border-radius: 12px 0 0 12px;
-		h1 {
-			color: $accent-green;
+		h5 {
+			color: $secondary-txt-dark;
+			writing-mode: vertical-rl;
+			text-orientation: upright;
+			text-transform: uppercase;
 		}
 	}
 	.contact-content {
@@ -27,7 +31,45 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-
+		p > * {
+			word-wrap: break-word !important;
+		}
 		// align-items: center;
+	}
+}
+
+@media (max-width: 375px) {
+	.contact {
+		.contact-head {
+			border-radius: 0;
+		}
+	}
+}
+
+html[data-theme="dark"] {
+	.contact {
+		box-shadow: none;
+		background: transparent;
+		.contact-head {
+			box-shadow: $box-shadow-dark;
+			margin-right: 0.5rem;
+			border-right: solid 1px transparent;
+			border-radius: 12px;
+		}
+		.contact-content {
+			margin-left: 0.5rem;
+			box-shadow: $box-shadow-dark;
+			border-radius: 12px;
+		}
+	}
+	@media (max-width: 375px) {
+		.contact {
+			.contact-head {
+				border-radius: 0 12px 12px 0;
+			}
+			.contact-content {
+				border-radius: 12px 0px 0px 12px;
+			}
+		}
 	}
 }
